<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_pratik"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/launchaddflight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchaddflight"
        android:text="@string/addflight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hello"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/launchsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchsearch"
        android:text="@string/searchflights"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hello"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/launchdelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchdelete"
        android:text="@string/launchdelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hello"
        app:layout_constraintVertical_bias="0.471" />

    <Button
        android:id="@+id/launchhelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchreadme"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hello"
        app:layout_constraintVertical_bias="0.623" />

</androidx.constraintlayout.widget.ConstraintLayout>